Marco updated gettingCSV.ipynb
Marco tested if the markdowns of jupyter are the same as that of git.

--- a/gettingCSV.ipynb
+++ b/gettingCSV.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Markdowns\n",
+        "#### Markdowns\n",
         "\n",
         "* Inference: Colab uses the same Markdown system as with GitHub.\n",
         "* Testing the hypothesis: Open this file on GitHub."
